--- a/MaxPowerLevel/Views/ChargedWithLight/ModPartial.cshtml
+++ b/MaxPowerLevel/Views/ChargedWithLight/ModPartial.cshtml
@@ -1,6 +1,6 @@
 @model ModData
 
-<div class="box my-2">
+<div class="charged-mod box my-2 mx-2">
   <div class="media">
     <div class="media-left">
       <figure class="image is-48x48">
