--- a/MaxPowerLevel/Views/Shared/_Layout.cshtml
+++ b/MaxPowerLevel/Views/Shared/_Layout.cshtml
@@ -25,8 +25,8 @@
 
                     <div class="navbar-brand">
                         <a class="navbar-item" asp-area="" asp-controller="Home" asp-action="Index">
-                            <i class="fas fa-level-up-alt mr-1"></i> Destiny 2 Utilities</a>            
-                        
+                            <i class="fas fa-level-up-alt mr-1"></i> Destiny 2 Utilities
+                        </a> 
                     </div>
                         @if(User.Identity.IsAuthenticated){  
                         <div class="navbar-end">                      
