--- a/MaxPowerLevel/Views/Shared/ItemPartial.cshtml
+++ b/MaxPowerLevel/Views/Shared/ItemPartial.cshtml
@@ -3,6 +3,7 @@
 <div class="item-box">
   <div class="item-slot">@Model.Slot.Name.Replace(" Weapons",String.Empty).Replace(" Armor",String.Empty)</div>
   <div class="pointer item-image divider-border" style="background-image: url('@Model.Icon')">
+      <img class="item-watermark" src="@Model.Watermark">
       <div class="item-power-level"> @Model.PowerLevel </div>
   </div>
   <div class="item-name">@Model.Name</div>
