Add dark CSS file
.has-background-light was removed from footer, and replaced with
"$footer-background-color: $light;" in default CSS.

--- a/MaxPowerLevel/wwwroot/css/bulma-default.scss
+++ b/MaxPowerLevel/wwwroot/css/bulma-default.scss
@@ -1,3 +1,12 @@
-﻿$navbar-item-color: #fff;
+﻿@import '../../Views/bulma/sass/utilities/derived-variables';
+
+$navbar-item-color: #fff;
+$footer-background-color: $light;
 
 @import '../../Views/bulma/bulma';
+
+table.dash-board-table {
+    td, th {
+        border-left-color: #dbdbdb !important;
+    }
+}
