--- a/MaxPowerLevel/Views/Shared/_Layout.cshtml
+++ b/MaxPowerLevel/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
     </div>
    
 
-    <footer class="footer has-background-light">
+    <footer class="footer">
         <div class="container is-fluid has-text-centered">            
             <p>
                 &copy; 2019-2020 - Andy Schott <a href="https://github.com/andyschott/MaxPowerLevel"><i class="fab fab fa-github-square"></i></a>. 
