Add client-side mode toggle

--- a/MaxPowerLevel/wwwroot/css/bulma-dark.scss
+++ b/MaxPowerLevel/wwwroot/css/bulma-dark.scss
@@ -19,3 +19,7 @@ table.dash-board-table {
         border-left-color: $border-light !important;
     }
 }
+
+.switch-to-dark-mode {
+    display: none !important;
+}
