--- a/MaxPowerLevel/wwwroot/css/bulma-default.scss
+++ b/MaxPowerLevel/wwwroot/css/bulma-default.scss
@@ -10,3 +10,7 @@ table.dash-board-table {
         border-left-color: #dbdbdb !important;
     }
 }
+
+.switch-to-light-mode {
+    display: none !important;
+}
